Added base configuration

--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,13 @@
 USERS_GRPC_HOST="users-service"
 USERS_GRPC_PORT=9090
 PORT=8001
+APP_DATABASE_HOST="chats-db"
+APP_DATABASE_PORT=5432
+APP_DATABASE_USER="testuser"
+APP_DATABASE_PASSWORD="testpass"
+APP_DATABASE_NAME="chats"
+
+POSTGRES_USER="testuser"
+POSTGRES_PASSWORD="testpass"
+POSTGRES_DB="chats"
+SECRET_KEY="slkdjfslkdjf"
