--- a/kubernetes/stage/db/deployment.yml
+++ b/kubernetes/stage/db/deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: chats-postgres-deployment
+  name: chats-db-deployment
 spec:
   replicas: 1
   selector:
@@ -13,21 +13,24 @@ spec:
         app: chats-service-db
     spec:
       containers:
-        - name: chats-postgres-container
-          image: postgres:15
+        - name: postgres-container
+          image: postgres
           env:
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
                   name: chats-postgres-credentials
                   key: user
+
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: chats-postgres-credentials
                   key: password
+
             - name: POSTGRES_DB
               value: chats_db
+
           ports:
             - containerPort: 5432
           volumeMounts:
