Added events using rabbitmq

--- a/.env.dev
+++ b/.env.dev
@@ -11,3 +11,9 @@ POSTGRES_USER="testuser"
 POSTGRES_PASSWORD="testpass"
 POSTGRES_DB="chats"
 SECRET_KEY="slkdjfslkdjf"
+
+RABBIT_USER="chackcheck"
+RABBIT_PASS="qwerty123"
+RABBIT_HOST="events-rabbit"
+RABBIT_PORT=5672
+RABBIT_EVENTS_QUEUE_NAME="events_queue"
