Fixed postgres version

--- a/kubernetes/stage/db/deployment.yml
+++ b/kubernetes/stage/db/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: chats-db
-          image: postgres
+          image: postgres:15
           envFrom:
             - configMapRef:
                 name: chats-db-configmap
