--- a/kubernetes/stage/app/deployment.yml
+++ b/kubernetes/stage/app/deployment.yml
@@ -23,7 +23,7 @@ spec:
               name: web
           env:
             - name: USERS_GRPC_HOST
-              value: "users-service"
+              value: "chack-users-service"
             - name: USERS_GRPC_PORT
               value: "9090"
             - name: PORT
