Added tests and some fixes

--- a/.env.test
+++ b/.env.test
@@ -1,17 +1,10 @@
-USERS_GRPC_HOST="users-service"
-USERS_GRPC_PORT=9090
 PORT=8001
-APP_DATABASE_HOST="chats-db"
+APP_DATABASE_HOST="test-db"
 APP_DATABASE_PORT=5432
 APP_DATABASE_USER="testuser"
 APP_DATABASE_PASSWORD="testpass"
 APP_DATABASE_NAME="chats"
-APP_RABBIT_USER="chackcheck"
-APP_RABBIT_PASSWORD="qwerty123"
-APP_RABBIT_HOST="events-rabbit"
-APP_RABBIT_PORT=5672
-APP_RABBIT_EVENTS_QUEUE_NAME="events_queue"
-APP_ENVIRONMENT="dev"
+APP_ENVIRONMENT="test"
 
 POSTGRES_USER="testuser"
 POSTGRES_PASSWORD="testpass"
