Added search service credentials

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,7 @@
 USERS_GRPC_HOST="users-service"
 USERS_GRPC_PORT=9090
+GRPC_SERVER_HOST="0.0.0.0"
+GRPC_SERVER_PORT=9090
 PORT=8001
 APP_DATABASE_HOST="chats-db"
 APP_DATABASE_PORT=5432
@@ -10,7 +12,7 @@ APP_RABBIT_USER="chackcheck"
 APP_RABBIT_PASSWORD="qwerty123"
 APP_RABBIT_HOST="events-rabbit"
 APP_RABBIT_PORT=5672
-APP_RABBIT_EVENTS_QUEUE_NAME="events_queue"
+APP_RABBIT_PUBLISHER_EXCHANGE_NAME="chats_exchange"
 APP_ENVIRONMENT="dev"
 
 POSTGRES_USER="testuser"
