--- a/kubernetes/stage/app/deployment.yml
+++ b/kubernetes/stage/app/deployment.yml
@@ -58,8 +58,12 @@ spec:
                 secretKeyRef:
                   name: rabbitmq-credentials
                   key: password
-            - name: APP_RABBIT_EVENTS_QUEUE_NAME
-              value: events_queue
+            - name: APP_RABBIT_PUBLISHER_EXCHANGE_NAME
+              value: chats_exchange
+            - name: GRPC_SERVER_HOST
+              value: "0.0.0.0"
+            - nam: GRPC_SERVER_PORT
+              value: 9090
             - name: SECRET_KEY
               valueFrom:
                 secretKeyRef:
