--- a/.github/workflows/cicd-stage.yml
+++ b/.github/workflows/cicd-stage.yml
@@ -22,6 +22,7 @@ jobs:
       run: docker compose -f docker-compose.test.yml down -v
   build:
     runs-on: ubuntu-latest
+    needs: [ test, build ]
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -43,7 +44,7 @@ jobs:
           cache-to: type=gha,mode=max
   deploy:
     name: Deploy
-    needs: [ build ]
+    needs: [ test, build ]
     runs-on: ubuntu-latest
     steps:
       - name: Set the kubernetes context
