--- a/.github/workflows/cicd-stage.yml
+++ b/.github/workflows/cicd-stage.yml
@@ -22,7 +22,7 @@ jobs:
       run: docker compose -f docker-compose.test.yml down -v
   build:
     runs-on: ubuntu-latest
-    needs: [ test, build ]
+    needs: [ test ]
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
