--- a/.env.test
+++ b/.env.test
@@ -5,6 +5,8 @@ APP_DATABASE_USER="testuser"
 APP_DATABASE_PASSWORD="testpass"
 APP_DATABASE_NAME="chats"
 APP_ENVIRONMENT="test"
+GRPC_SERVER_HOST="0.0.0.0"
+GRPC_SERVER_PORT=9090
 
 POSTGRES_USER="testuser"
 POSTGRES_PASSWORD="testpass"
