--- a/kubernetes/stage/app/deployment.yml
+++ b/kubernetes/stage/app/deployment.yml
@@ -71,3 +71,8 @@ spec:
                 secretKeyRef:
                   name: users-service-credentials
                   key: secret_key
+            - name: FILES_SIGNATURE_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: files-service-credentials
+                  key: signature_key
