--- a/.github/workflows/cicd-stage.yml
+++ b/.github/workflows/cicd-stage.yml
@@ -5,24 +5,24 @@ on:
     branches: [ "dev", "development" ]
 
 jobs:
-  test:
+  # test:
 
-    runs-on: ubuntu-latest
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v3
+  #   steps:
+  #   - uses: actions/checkout@v3
 
-    - name: Build tests
-      run: docker compose -f docker-compose.test.yml up --build -d
+  #   - name: Build tests
+  #     run: docker compose -f docker-compose.test.yml up --build -d
 
-    - name: Run tests
-      run: docker compose -f docker-compose.test.yml exec -it test-service go test -v ./... && docker compose -f docker-compose.test.yml down -v
+  #   - name: Run tests
+  #     run: docker compose -f docker-compose.test.yml exec -it test-service go test -v ./... && docker compose -f docker-compose.test.yml down -v
 
-    - name: Dropdown tests
-      run: docker compose -f docker-compose.test.yml down -v
+  #   - name: Dropdown tests
+  #     run: docker compose -f docker-compose.test.yml down -v
   build:
     runs-on: ubuntu-latest
-    needs: [ test ]
+    # needs: [ test ]
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -44,7 +44,8 @@ jobs:
           cache-to: type=gha,mode=max
   deploy:
     name: Deploy
-    needs: [ test, build ]
+    # needs: [ test, build ]
+    needs: [ build ]
     runs-on: ubuntu-latest
     steps:
       - name: Set the kubernetes context
