--- a/.env.dev
+++ b/.env.dev
@@ -14,6 +14,7 @@ APP_RABBIT_HOST="events-rabbit"
 APP_RABBIT_PORT=5672
 APP_RABBIT_PUBLISHER_EXCHANGE_NAME="chats_exchange"
 APP_ENVIRONMENT="dev"
+APP_REDIS_URL="redis://chats-redis/0"
 
 POSTGRES_USER="testuser"
 POSTGRES_PASSWORD="testpass"
