Added saved messages chat for new users

--- a/.env.dev
+++ b/.env.dev
@@ -13,6 +13,8 @@ APP_RABBIT_PASSWORD="qwerty123"
 APP_RABBIT_HOST="events-rabbit"
 APP_RABBIT_PORT=5672
 APP_RABBIT_PUBLISHER_EXCHANGE_NAME="chats_exchange"
+APP_RABBIT_USERS_EXCHANGE_NAME="users_exchange"
+APP_RABBIT_CONSUMER_QUEUE_NAME="chats_queue"
 APP_ENVIRONMENT="dev"
 APP_REDIS_URL="redis://chats-redis/0"
 
