--- a/kubernetes/stage/app/deployment.yml
+++ b/kubernetes/stage/app/deployment.yml
@@ -62,6 +62,10 @@ spec:
                   key: password
             - name: APP_RABBIT_PUBLISHER_EXCHANGE_NAME
               value: chats_exchange
+            - name: APP_RABBIT_USERS_EXCHANGE_NAME
+              value: users_exchange
+            - name: APP_RABBIT_CONSUMER_QUEUE_NAME
+              value: chats_queue
             - name: GRPC_SERVER_HOST
               value: "0.0.0.0"
             - name: GRPC_SERVER_PORT
