--- a/kubernetes/stage/app/service.yml
+++ b/kubernetes/stage/app/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: chack-chats-service
+  name: diffaction-chats-service
 spec:
   selector:
-    app: chack-chats-service
+    app: diffaction-chats-service
   ports:
     - protocol: TCP
       port: 8000
