Added changing chats mutations

--- a/.env.dev
+++ b/.env.dev
@@ -3,15 +3,9 @@ APP_USERS_GRPC_PORT=9090
 APP_GRPC_HOST="0.0.0.0"
 APP_GRPC_PORT=9091
 APP_PORT=8001
-APP_DATABASE_HOST="chats-db"
-APP_DATABASE_PORT=5432
-APP_DATABASE_USER="testuser"
-APP_DATABASE_PASSWORD="testpass"
+APP_DATABASE_DSN="host=chats-db port=5432 user=testuser password=testpass dbname=chats sslmode=disable TimeZone=UTC"
 APP_DATABASE_NAME="chats"
-APP_RABBIT_USER="chackcheck"
-APP_RABBIT_PASSWORD="qwerty123"
-APP_RABBIT_HOST="events-rabbit"
-APP_RABBIT_PORT=5672
+APP_RABBIT_HOST="amqp://chackcheck:qwerty123@events-rabbit:5672/"
 APP_RABBIT_PUBLISHER_EXCHANGE_NAME="chats_exchange"
 APP_RABBIT_USERS_EXCHANGE_NAME="users_exchange"
 APP_RABBIT_CONSUMER_QUEUE_NAME="chats_queue"
