Added recognition and saved messages chat avatar url

--- a/.env.dev
+++ b/.env.dev
@@ -9,6 +9,8 @@ APP_RABBIT_HOST="amqp://chackcheck:qwerty123@events-rabbit:5672/"
 APP_RABBIT_PUBLISHER_EXCHANGE_NAME="chats_exchange"
 APP_RABBIT_USERS_EXCHANGE_NAME="users_exchange"
 APP_RABBIT_CONSUMER_QUEUE_NAME="chats_queue"
+APP_RABBIT_RECOGNITION_QUEUE_NAME=chats_messages_recognition_queue
+APP_RABBIT_RECOGNITION_EXCHANGE_NAME=recognition_exchange
 APP_ENVIRONMENT="dev"
 APP_REDIS_URL="redis://chats-redis/0"
 
